veecle-osal-std-macros/tests/ui/on_struct.rs
#[veecle_osal_std_macros::main]
struct Foo;
